# apiserver-builder-test

./: BUILD.bazel  boilerplate.go.txt
cmd/apiserver/: main.go
cmd/controller-manager/: main.go
pkg/: doc.go
pkg/apis/: doc.go
pkg/controller/: doc.go
pkg/controller/sharedinformers/: doc.go
pkg/openapi/: doc.go
